--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "main": "src/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "fuse.js": "6.4.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
